<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="1"
        android:icon="@drawable/ic_refresh_white_48dp"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_more_vert_white_48dp">
    <menu>
        <item
            android:id="@+id/item_4"
            android:title="@string/export">
        </item>
        <item
            android:id="@+id/item_1"
            android:title="@string/delete_all">
        </item>
        <item
            android:id="@+id/item_3"
            android:title="@string/help">
        </item>
        <item
            android:id="@+id/item_6"
            android:title="@string/about">
        </item>

    </menu>
    </item>

</menu>
