<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_height="match_parent"
    tools:context=".activities.AddTutorial">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_instruction"
        android:layout_below="@id/my_toolbar"
        android:id="@+id/tutorial_intro"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"/>


    <Button
        android:id="@+id/add_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_custom"
        android:textStyle="bold"
        android:textColor="@color/windowBackground"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimaryDark"/>
    <Button
        android:id="@+id/go_gospel_library"
        android:layout_width="match_parent"
        android:layout_above="@id/add_custom"
        android:layout_height="wrap_content"
        android:text="@string/go_to_gospel_lib"
        android:textStyle="bold"
        android:textColor="@color/windowBackground"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimaryDark"/>

    <VideoView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tutorial_intro"
        android:id="@+id/tutorial_video"
        android:layout_marginStart="80dp"
        android:background="@drawable/video_border"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_above="@id/go_gospel_library"/>




</RelativeLayout>